package blackhole;

option java_package = "com.dp.blackhole.protocol.control";
option java_outer_classname = "BrokerRegPB";

message BrokerReg{
    required int32 broker_port = 1;
    required int32 recovery_port = 2;
}