package blackhole;

option java_package = "com.dp.blackhole.protocol.control";
option java_outer_classname = "NoAvailableNodePB";

message NoAvailableNode {
    required string app_name = 1;
}